--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -4,6 +4,75 @@
     margin: 0 auto;
     padding: 1rem;
     margin-top: 5rem;
-    border: 1px solid #ccc;
 
+}
+
+
+fieldset {
+    border: 0;
+    padding: 0.01px 0 0 0;
+    margin: 0;
+    min-width: 0;
+    display: table-cell;
+}
+
+.fieldset-wrapper {
+    padding: 1em;
+    margin-bottom: 1em;
+    border: 1px solid #eee;
+    background-color: #fff;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+}
+:root .fieldset-wrapper {
+    border: 0;
+}
+
+legend {
+    padding: 0 0 .5em 0;
+    font-weight: bold;
+    color: #777;
+    display: table;
+}
+
+input,
+textarea {
+    font: inherit;
+}
+
+.field-text {
+    max-width: 20rem;
+}
+
+.field-text label {
+    cursor: pointer;
+}
+.field-text label,
+.field-text input {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.field-text input {
+    padding: .375em .3125em .3125em;
+    border: 1px solid #ccc;
+    border-radius: .25em;
+    -webkit-appearance: none;
+}
+
+button {
+    cursor: pointer;
+    border: 0;
+    padding: .5em 1em;
+    color: #fff;
+    border-radius: .25em;
+    font-size: 1em;
+    background-color: #173b6d;
+    background-image: linear-gradient(to bottom, #1a4a8e, #173b6d);
+    box-shadow: 0 .1em 0 rgba(23, 59, 109, 0.3), inset 0 1px 0 rgba(0, 0, 0, 0.3);
+}
+
+button:hover {
+    background-color: #2158a9;
+    background-image: linear-gradient(to bottom, #2063c0, #1d4d90);
+    box-shadow: 0 .25em 0 rgba(23, 59, 109, 0.3);
 }
