set required attribute to the input field to avoid empty uploads

--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -15,13 +15,13 @@
     </div>
 
 
-    <form id="fileupload-form" method="POST" enctype="multipart/form-data" action="/upload-file">
+    <form id="fileupload-form" method="POST"  enctype="multipart/form-data" action="/upload-file">
         <div class="fieldset-wrapper">
             <fieldset>
                 <legend>Upload your file</legend>
                 <p class="field field-text">
                     <label for="file-upload">File to upload:</label>
-                    <input id="file-upload" type="file" name="file"/>
+                    <input id="file-upload" type="file" name="file" accept=".json" required/>
                 </p>
                 <button type="submit" value="Upload">Upload</button>
             </fieldset>
