--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -18,7 +18,7 @@
     <form id="fileupload-form" method="POST"  enctype="multipart/form-data" action="/upload-file">
         <div class="fieldset-wrapper">
             <fieldset>
-                <legend>Upload your file</legend>
+                <legend>Upload your JSON file here</legend>
                 <p class="field field-text">
                     <label for="file-upload">File to upload:</label>
                     <input id="file-upload" type="file" name="file" accept=".json" required/>
