add Game Abstraction class for code refactoring and reorganisation

--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -15,7 +15,7 @@
     </div>
 
 
-    <form id="fileupload-form" method="POST"  enctype="multipart/form-data" action="/upload-file">
+    <form id="fileupload-form" method="POST"  enctype="multipart/form-data" action="/file/upload">
         <div class="fieldset-wrapper">
             <fieldset>
                 <legend>Upload your JSON file here</legend>
